--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -1,5 +1,5 @@
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container-fluid">
       <ul class="nav">
         <li class="nav-item">
@@ -15,4 +15,4 @@
          - coded by <a target="_blank" href="https://appseed.us?ref=ct-demo">AppSeed</a>.
       </div>
     </div>
-  </footer>
+  </footer> -->
