--- a/core/templates/includes/scripts.html
+++ b/core/templates/includes/scripts.html
@@ -8,7 +8,7 @@
   <script src="{% static 'assets/js/plugins/perfect-scrollbar.jquery.min.js' %}"></script>
   <!--  Google Maps Plugin    -->
   <!-- Place this tag in your head or just before your close body tag. -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv9BzFqmOFvXn9a4VVT6YvyO6jUZTJyvE"></script> -->
   <!-- Chart JS -->
   <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
   <!--  Notifications Plugin    -->
