--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -7,7 +7,9 @@
 
 {% block content %}
 
-    <div class="row">
+<h1 style="text-align: center;padding: 170px 0;">Welcome</h1>
+
+    <!-- <div class="row">
 
       <div class="col-12">
         <div class="card card-chart">
@@ -376,7 +378,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 {% endblock content %}
 
