--- a/core/templates/page-user.html
+++ b/core/templates/page-user.html
@@ -53,7 +53,7 @@
             <div class="col-md-12">
               <div class="form-group">
                 <label>Address</label>
-                <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
+                <input type="text" class="form-control" placeholder="Home Address" value="">
               </div>
             </div>
           </div>
@@ -61,13 +61,13 @@
             <div class="col-md-4 pr-md-1">
               <div class="form-group">
                 <label>City</label>
-                <input type="text" class="form-control" placeholder="City" value="Mike">
+                <input type="text" class="form-control" placeholder="City" value="">
               </div>
             </div>
             <div class="col-md-4 px-md-1">
               <div class="form-group">
                 <label>Country</label>
-                <input type="text" class="form-control" placeholder="Country" value="Andrew">
+                <input type="text" class="form-control" placeholder="Country" value="">
               </div>
             </div>
             <div class="col-md-4 pl-md-1">
@@ -81,7 +81,7 @@
             <div class="col-md-8">
               <div class="form-group">
                 <label>About Me</label>
-                <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
+                <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value=""></textarea>
               </div>
             </div>
           </div>
@@ -112,22 +112,6 @@
             </p>
           </div>
         </p>
-        <div class="card-description">
-          Do not be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
-        </div>
-      </div>
-      <div class="card-footer">
-        <div class="button-container">
-          <button href="javascript:void(0)" class="btn btn-icon btn-round btn-facebook">
-            <i class="fab fa-facebook"></i>
-          </button>
-          <button href="javascript:void(0)" class="btn btn-icon btn-round btn-twitter">
-            <i class="fab fa-twitter"></i>
-          </button>
-          <button href="javascript:void(0)" class="btn btn-icon btn-round btn-google">
-            <i class="fab fa-google-plus"></i>
-          </button>
-        </div>
       </div>
     </div>
   </div>
